[package]
name = "query-wmi"
version = "1.1.1"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "A crate to query WMI classes in Windows OS"
repository = "https://github.com/SubconsciousCompute/query-wmi"
homepage = "https://github.com/SubconsciousCompute/query-wmi"
keywords = ["wmi", "query", "windows", "win32", "com"]
readme = "README.md"
documentation = "https://docs.rs/query-wmi"
license = "AGPL-3.0-only"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.11.4"
serde = "1.0.152"
paste = "1.0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3